falcoWebhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: falco-webhook
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: falco-webhook
