sandboxDecoyDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-be-decoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox-be-decoy
  template:
    metadata:
      labels:
        app: sandbox-be-decoy
    spec:
      containers:
        - name: sandbox-be-decoy
          image: adarkst/sandbox-be-decoy:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-be-decoy
spec:
  selector:
    app: sandbox-be-decoy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-be-decoy-loadbalancer
spec:
  selector:
    app: sandbox-be-decoy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
